cmake_minimum_required(VERSION 4.0.1)

# Add CUDA Toolkit
cmake_policy(SET CMP0079 NEW)
find_package(CUDAToolkit)

# target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC DATA_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../Data/") # development
# target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC DATA_PATH="./Data/") # shipping

project(Rftim3AdventOfCode VERSION 0.1.0 LANGUAGES C CXX)
add_subdirectory(Rftim3AdventOfCode)

# project(Rftim3AtCoderJP VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3AtCoderJP)

# project(Rftim3C VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3C)

# project(Rftim3CodeForces VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3CodeForces)

# project(Rftim3CodinGame VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3CodinGame)

# project(Rftim3CPP VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3CPP)

# project(Rftim3CUDA VERSION 0.1.0 LANGUAGES C CUDA CXX)
# add_subdirectory(Rftim3CUDA)

# project(Rftim3EverybodyCodes VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3EverybodyCodes)

# project(Rftim3GTest VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3GTest)

# project(Rftim3Kaggle VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3Kaggle)

# project(Rftim3LeetCode VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3LeetCode)

# project(Rftim3Leviathan VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3Leviathan)

# project(Rftim3Meta VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3Meta)

# project(Rftim3PostgreSQL VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3PostgreSQL)

# project(Rftim3ProjectEuler VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3ProjectEuler)

# project(Rftim3Vulkan VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3Vulkan)
# add_subdirectory(Rftim3VKEngine)

# project(Rftim3Win32 VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3Win32)

#######################################################################################################################################################################################################
########################################################################################### AdventOfCode ##############################################################################################
#######################################################################################################################################################################################################

# project(aoc_00000001Y22 VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3AdventOfCode/Problems/AdventOfCode_2022/aoc_00000001Y22)

# project(aoc_00000001Y18 VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3AdventOfCode/Problems/AdventOfCode_2018/aoc_00000001Y18)

#######################################################################################################################################################################################################
#######################################################################################################################################################################################################
#######################################################################################################################################################################################################

#######################################################################################################################################################################################################
############################################################################################ CodeForces ###############################################################################################
#######################################################################################################################################################################################################

# project(cf_00000002A VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3CodeForces/Problems/CodeForces_Beta_Round_2/cf_00000002A)

# project(cf_00000002B VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3CodeForces/Problems/CodeForces_Beta_Round_2/cf_00000002B)

# project(cf_00000002C VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3CodeForces/Problems/CodeForces_Beta_Round_2/cf_00000002C)

#######################################################################################################################################################################################################
#######################################################################################################################################################################################################
#######################################################################################################################################################################################################

#######################################################################################################################################################################################################
############################################################################################# CodinGame ###############################################################################################
#######################################################################################################################################################################################################

# project(cg_00000001 VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3CodinGame/Problems/CodinGame_Puzzle_Easy/cg_00000001)

# project(cg_00000002 VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3CodinGame/Problems/CodinGame_Puzzle_Easy/cg_00000002)

#######################################################################################################################################################################################################
#######################################################################################################################################################################################################
#######################################################################################################################################################################################################


#######################################################################################################################################################################################################
############################################################################################# LeetCode ################################################################################################
#######################################################################################################################################################################################################

# project(lc_00000386 VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3LeetCode/Problems/LeetCode_Warm_Up_Contest/lc_00000386)

# project(lc_00000387 VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3LeetCode/Problems/LeetCode_Warm_Up_Contest/lc_00000387)

# project(lc_00000388 VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3LeetCode/Problems/LeetCode_Warm_Up_Contest/lc_00000388)

#######################################################################################################################################################################################################
#######################################################################################################################################################################################################
#######################################################################################################################################################################################################

#######################################################################################################################################################################################################
########################################################################################### ProjectEuler ##############################################################################################
#######################################################################################################################################################################################################

# project(pe_00000001 VERSION 0.1.0 LANGUAGES C CXX)
# add_subdirectory(Rftim3ProjectEuler/Problems/ProjectEuler/pe_00000001)

#######################################################################################################################################################################################################
#######################################################################################################################################################################################################
#######################################################################################################################################################################################################


add_subdirectory(Rftim3STL_C)
add_subdirectory(Rftim3STL_CPP)
project(aoc_00000001_Y22 VERSION 0.1.0 LANGUAGES C CXX)
add_subdirectory(Rftim3AdventOfCode/Problems/AdventOfCode_2022/aoc_00000001_Y22)

